# agent-webpage

./: .gitignore  README.md
backend/: pyproject.toml
backend/src/tg_agent_bot/: app.py  llm.py
backend/src/tg_agent_bot/orchestrator/: followup.py  summaries.py
backend/tests/: test_followup.py  test_orchestrator_workflows.py  test_web_chat_service.py
frontend/: .env.example
frontend/src/: types.ts
frontend/src/components/: ScheduleBoard.tsx
scripts/: dev-frontend.ps1
telegram-agents/: README.md
telegram-agents-backup/: .gitignore
telegram-agents-backup/.github/workflows/: ci.yml
telegram-agents-backup/backend/: requirements.txt
telegram-agents-backup/backend/src/tg_agent_bot/calendar/: service.py
telegram-agents-backup/backend/src/tg_agent_bot/common/: __init__.py
telegram-agents-backup/backend/src/tg_agent_bot/orchestrator/: planner.py  prompts.py  validation.py
telegram-agents-backup/backend/src/tg_agent_bot/telegram/: handlers.py
telegram-agents-backup/backend/src/tg_agent_bot/weather/: service.py
telegram-agents-backup/backend/src/tg_agent_bot/web/: session_state.py
telegram-agents-backup/frontend/: index.html
telegram-agents-backup/frontend/src/: main.tsx
telegram-agents-backup/frontend/src/components/: MessageBubble.tsx
telegram-agents-backup/scripts/: dev-backend.ps1
telegram-agents/backend/src/tg_agent_bot/calendar/: serializers.py
telegram-agents/frontend/: package-lock.json  package.json  tailwind.config.js
telegram-agents/frontend/src/hooks/: useChatSocket.ts
telegram-agents/scripts/: check.ps1
(+7 files in other folders)
